welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
	var T = new Array [Color](getWorldHeight())
	for (i <- 0 to (getWorldHeight()-1)) {
		T(i) = getCouleurSol();avance();
		}
	for (i <- 0 to (getWorldHeight()-1) {
		avance();
		}
	for (i <- 0 to (getWorldHeight()-1) {
		recule();
		}
}